# setup-quickcallnumber

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  sip_params.py
tests/: sip_params_test.py
utils/: helpers.py
